--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
 }
 
+:root {
+  --color-muted: #6c757d;
+  --color-main: #fec810;
+}
+
 body {
   font-family: "Roboto Slab", serif;
 }
@@ -15,11 +20,13 @@ body {
   padding: 0 1em;
 }
 
+h4 {
+  font-size: 1.5rem;
+}
+
 /* Navbar */
 .navbar {
-  font-size: 14px;
   font-family: "Montserrat";
-  letter-spacing: 1px;
   position: fixed;
   padding: 2em 1em;
   z-index: 99;
@@ -28,7 +35,6 @@ body {
 .navbar a {
   color: #fff;
   text-decoration: none;
-  text-transform: uppercase;
 }
 .navbar > .container {
   align-items: center;
@@ -39,17 +45,23 @@ body {
 }
 .navbar-menu {
   display: inline-flex;
+  font-size: 0.875em;
+  letter-spacing: 1px;
   list-style: none;
   margin: 0;
+  text-transform: uppercase;
 }
 .navbar-menu li {
   padding: 1em;
 }
-.navbar-brand {
-  display: inline-block;
+.navbar-menu a:hover {
+  color: var(--color-main);
 }
-.navbar-right {
-  align-content: right;
+a.navbar-brand {
+  color: var(--color-main);
+  display: inline-block;
+  font-family: "Kaushan Script";
+  font-size: 1.75em;
 }
 
 /* Hero */
@@ -80,8 +92,9 @@ header.hero {
   margin-bottom: 0.5em;
 }
 .hero-text button {
+  cursor: pointer;
   color: #fff;
-  background-color: #fed135;
+  background-color: var(--color-main);
   border: 1px solid transparent;
   border-radius: 5px;
   font-size: 18px;
@@ -92,4 +105,54 @@ header.hero {
 }
 .hero-text button:hover {
   background-color: #fec810;
+}
+
+/* Section - General */
+.page-section {
+  padding: 100px 0;
+}
+.page-section > .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.section-heading {
+  flex-basis: 100%;
+  font-family: "Montserrat";
+  font-size: 40px;
+  line-height: 1.2;
+  margin: 0 0 15px 0;
+  text-transform: uppercase;
+  text-align: center;
+}
+.section-subheading {
+  flex-basis: 100%;
+  color: var(--color-muted);
+  font-weight: 400;
+  font-size: 16px;
+  font-style: italic;
+  margin: 0 0 75px 0;
+  text-align: center;
+}
+
+/* Section - Services */
+.service-heading {
+  font-family: "Montserrat";
+  margin: 15px 0;
+}
+.service-item {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 33%;
+  align-items: center;
+  padding: 0 1em;
+}
+.service-item i:first-child {
+  color: var(--color-main);
+}
+.service-item p {
+  color: var(--color-muted);
+  margin: 0 0 1rem 0;
+  text-align: center;
+  line-height: 1.75;
 }
